--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/lenny/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Lenny Blakeman</title>
-		<script type="module" crossorigin src="/lenny/assets/index.95600130.js"></script>
-		<link rel="stylesheet" href="/lenny/assets/index.3fce1f81.css">
+		<script type="module" crossorigin src="/assets/index.cf26bd2e.js"></script>
 	</head>
 	<body>
 		<div id="root"></div>
