--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Lenny Blakeman</title>
+		<title>Lenny's Space Wars space</title>
 		<script type="module" crossorigin src="/assets/index.cf26bd2e.js"></script>
 	</head>
 	<body>
