--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Lenny's Space Wars space</title>
-		<script type="module" crossorigin src="/assets/index.cf26bd2e.js"></script>
+		<script type="module" crossorigin src="/lenny/assets/index.43bdbf5c.js"></script>
 	</head>
 	<body>
 		<div id="root"></div>
