deploy: 8f42214e3c202adfa787fd4f89275294cf058dbd

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Lenny's Space Wars space</title>
-		<script type="module" crossorigin src="/assets/index.43bdbf5c.js"></script>
+		<script type="module" crossorigin src="/assets/index.fdb48cf4.js"></script>
+		<link rel="stylesheet" href="/assets/index.5fb6ff91.css">
 	</head>
 	<body>
 		<div id="root"></div>
